--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- Portfolio Grid Section -->
 
-    <section class="success">
+    <section class="success" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
